--- a/chatsite/chat/templates/chat/_base.html
+++ b/chatsite/chat/templates/chat/_base.html
@@ -16,6 +16,7 @@
         <a href="/">Início</a>
         <a href="/about">Sobre</a>
         <a href="/contact">Contato</a>
+        <a href="/register">Cadastre-se</a>
     </nav>
     <main>
         {% block content %}{% endblock %}
